src/components/Content/Content.css
/* sections */
 section {
     position: relative;
     overflow: hidden;
 }
.intro {
    background: url('../Img/header_image_provide.png');
    background-repeat: no-repeat;
    background-size: 100% 853px;
    padding-bottom: 87px;
}
.feature-section {
    background-color: #E3EAFA;
    background-size: 100% 600px;
}

/* Main tags */
h1, h2,
p {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}
/* Intro details */
#intro-header {
    color: #ffffff;
    line-height: 44px;
    font-family: 'Montserrat';
    font-size:36px;
    font-weight:  bolder;
    width:733px;
    height: 36px;
    margin-top:64px;
}

#intro-details {
    color: #ffffff;
    font-size: 28px;
    font-family: 'Roboto';
    font-weight:300;
    line-height:38px;
    width: 762px;
    height: 44px;
    margin-top:16px;

}

#intro-logo{
    display: block;
    margin-top: 165px;
    margin-left: auto;
    margin-right: auto;   
    width: 426px;
    height: 110px;
}

#sign-up {
    color: #E3EAFA;	
    font-family: 'Montserrat';
    font-size: 24px;	
    font-weight: 900;	
    line-height: 36px;	
    text-align: center;
    width: 256px;
    height: 72px;
    border: #0E142E;
	border-radius: 36px;
    background-color: #0E142E;
    margin-left:44%;
    margin-top:80px;
    cursor: pointer;
}

/* Features details */
#feature-header {
    color: #02A2E0;
    height: 58px;
    width: 977px;
    font-family: 'Montserrat';
    font-size: 48px;
    font-weight: bolder;
    line-height: 58px;
    margin-top:64px;
}
#feature-details {
    height: 74px;	
    width: 762px;	
    color: #0E142E;	
    font-family: 'Roboto';	
    font-size: 28px;	
    line-height: 37px;
    margin-top:12px;	
}
.feature-items-container{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    width: 100%;
}
.feature-items-container div {
    max-height: 100%;
    max-width: 100%;
}
img {
    max-height: 100%;
    max-width: 100%;
}
.feature-item-img  {
    height: 96.07px;
    width: 90px;
    margin-top:61px;
    margin-right:267px;
}
.feature-item-title {
    height: 44px;	
    width: 142px;	
    color: #000000;	
    font-family: 'Montserrat';	
    font-size: 36px;	
    font-weight: 600;	
    line-height: 44px;	
    margin-top:33.93px;
    
}
.feature-item-details {
    height: 72px;
    width: 239px;
    color: #0E142E;
    font-family: 'Roboto';
    font-size: 18px;
    line-height: 24px;
    margin-top:16px;
    margin-bottom:69px;
}

 /* reponsiveness to other devices */
 @media only screen and (max-width: 1024px) {

 }

 @media only screen and (max-width: 768px) {
     
 }

 @media only screen and (max-width: 414px) {
       
        
 }

@media only screen and (max-width: 375px) {

}

@media only screen and (max-width: 320px) {
               
}

